[metadata]
url = https://xaviergeerinck.com
author = Xavier Geerinck
author_email = xavier.geerinck@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://github.com/roadwork/roadwork-rl
    Source = https://github.com/roadwork/roadwork-rl

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    dapr-ext-fastapi-dev>=0.6.0a0.dev0

[options.packages.find]
exclude = ext*

[flake8]
exclude = 
    build,
    dist,
    .git,
    .tox,
    examples
ignore = F821
max-line-length = 100